# license-services

./: CMakeLists.txt  LICENSE  README.md  compile.bat
conf/: daemonapp.cfg  license-client.cfg  license-server.cfg  logger.cfg  message_types.json
daemon/: CMakeLists.txt  sharedmemory_worker_test.cpp
daemon/src/: appconfig_reader.cpp  appconfig_reader.h  main.cpp  processmanager.cpp  processmanager.h  shared_memory_checker.hpp
doc/: license通信协议.md
include/: bytes_buffer.hpp  common.h  json_message_processor.h  licenseclient.h  logger.hpp  loghelper.h  message_def.h  message_types_res.h  messagebus.hpp  processhelper.hpp  rockapi.h  sinks_syslog.hpp  tcp_message.hpp  tcpclient.h  tcpserver.h  timer_later.hpp  utility.hpp
json_message_processor/: CMakeLists.txt  json_message_processor.cpp
license-client/: CMakeLists.txt
license-client/clientapp/: CMakeLists.txt  appconfig_reader.cpp  appconfig_reader.h  main.cpp  message_type_reader.cpp  message_type_reader.h
license-client/include/: tcpclient.h
license-client/licenseclient/: CMakeLists.txt  licenseclient-impl.cpp  licenseclient-impl.h  licenseclient.cpp
license-client/tcpclient/: CMakeLists.txt  tcpclient.cpp  tcpclient_impl.cpp  tcpclient_impl.h
license-server/: CMakeLists.txt
license-server/dogservice/: CMakeLists.txt  dogservice.cpp
license-server/include/: dogservice.h  messagehandler.h
license-server/serverapp/: CMakeLists.txt  appconfig_reader.cpp  appconfig_reader.h  main.cpp  message_type_reader.cpp  message_type_reader.h
license-server/tcpservice/: CMakeLists.txt  messagehandler.cpp  messagehandler.h  sessionmanager.cpp  sessionmanager.h  subscriber.h  tcpserver.cpp  tcpserver_impl.cpp  tcpserver_impl.h  tcpserver_session.cpp  tcpserver_session.h
loghelper/: CMakeLists.txt  loghelper.cpp
